# compact-calendar-cli

./: Cargo.toml  README.md
.github/workflows/: binaries.yml
src/: config.rs  formatting.rs  lib.rs  main.rs  models.rs  rendering.rs
tests/: snapshots.rs
tests/fixtures/: empty.toml  quarters.toml  simple.toml
tests/snapshots/: snapshots__empty_2025.snap  snapshots__quarters_2023.snap  snapshots__quarters_2024.snap  snapshots__simple_2024.snap  snapshots__simple_2025.snap  snapshots__sunday_start_2024.snap
vhs/: readme.vhs
