[package]
name = "compact-calendar"
description = "A compact calendar CLI with TOML-based date details"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anstyle = "1.0"

[dev-dependencies]
insta = "1.41"
