[package]
name = "compact-calendar-cli"
description = "A compact calendar CLI with TOML-based date details"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anstyle = "1.0"
ratatui-style-ayu = "0.3.0"
ratatui-core = "0.1.0"

[dev-dependencies]
insta = "1.41"

[profile.release]
strip = true

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
